Cycles SSS completely broken in recent builds, renders as black #44123

Closed
opened 2015-03-24 18:56:59 +01:00 by Adam Friesen · 10 comments

System Information
An Ivy Bridge i7 CPU, an ATI HD9xxx GPU, 16 gigs RAM, Windows 7 64 bit.

Blender Version
Broken: Blender 2,75 hash 22e2225
Worked: Blender 2.75 hash c31aae0

Short description of error
SSS renders as black as if the node doesn't exist, something committed very recently broke the node completely

Exact steps for others to reproduce the error
Switch to the rendered view

Blend
Cycles_brokenSSS.blend

**System Information** An Ivy Bridge i7 CPU, an ATI HD9xxx GPU, 16 gigs RAM, Windows 7 64 bit. **Blender Version** Broken: Blender 2,75 hash 22e2225 Worked: Blender 2.75 hash c31aae0 **Short description of error** SSS renders as black as if the node doesn't exist, something committed very recently broke the node completely **Exact steps for others to reproduce the error** Switch to the rendered view **Blend** [Cycles_brokenSSS.blend](https://archive.blender.org/developer/F154746/Cycles_brokenSSS.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Ace_Dragon

Added subscriber: @Ace_Dragon
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

confirming

confirming
Sergey Sharybin was assigned by Aaron Carlisle 2015-03-24 20:07:50 +01:00
Member

possibly

01ee21ffb9

possibly 01ee21ffb9

This issue was referenced by 87cff57207

This issue was referenced by 87cff57207ca05602794e5dd1d7f08cd7818fbb6

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 87cff57207.

Closed by commit 87cff57207.

This issue was referenced by f1f797599f

This issue was referenced by f1f797599f5f2a183e7680e3eb5b5c5ea3361376

This issue was referenced by blender/cycles@acfcdfcb04

This issue was referenced by blender/cycles@acfcdfcb047ea184baaa10dbb652ee19b171ed88
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44123
No description provided.