intern/cycles/kernel/closure/bsdf_transparent.h
@@ -38,8 +38,6 @@ CCL_NAMESPACE_BEGIN
 ccl_device int bsdf_transparent_setup(ShaderClosure *sc)
 {
 	sc->type = CLOSURE_BSDF_TRANSPARENT_ID;
-	sc->data0 = 0.0f;
-	sc->data1 = 0.0f;
 	return SD_BSDF|SD_TRANSPARENT;
 }
 
